--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Install mold as default linker
+        uses: rui314/setup-mold@v1
+
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -46,6 +49,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
+      - name: Install mold as default linker
+        uses: rui314/setup-mold@v1
 
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
