--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -1,6 +1,12 @@
 name: Rust
 
-on: [push, pull_request]
+on:
+  push:
+    paths-ignore:
+      - ".cargo"
+  pull_request:
+    paths-ignore:
+      - ".cargo"
 
 env:
   CARGO_TERM_COLOR: always
