--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -3,10 +3,12 @@ name: Rust
 on:
   push:
     paths-ignore:
-      - ".cargo"
+      - ".cargo/**"
   pull_request:
     paths-ignore:
-      - ".cargo"
+      - ".cargo/**"
+    branches:
+      - main
 
 env:
   CARGO_TERM_COLOR: always
