--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -18,8 +18,8 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
-      - name: Install mold as default linker
-        uses: rui314/setup-mold@v1
+      # - name: Install mold as default linker
+      #   uses: rui314/setup-mold@v1
 
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -55,8 +55,8 @@ jobs:
     name: Clippy
     runs-on: ubuntu-latest
     steps:
-      - name: Install mold as default linker
-        uses: rui314/setup-mold@v1
+      # - name: Install mold as default linker
+      #   uses: rui314/setup-mold@v1
 
       - name: Checkout repository
         uses: actions/checkout@v2
