--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -18,9 +18,6 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
-      # - name: Install mold as default linker
-      #   uses: rui314/setup-mold@v1
-
       - name: Checkout repository
         uses: actions/checkout@v2
 
@@ -30,6 +27,9 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+
+      - name: Install mold as default linker
+        uses: rui314/setup-mold@v1
 
       - name: Run cargo test
         uses: actions-rs/cargo@v1
@@ -55,9 +55,6 @@ jobs:
     name: Clippy
     runs-on: ubuntu-latest
     steps:
-      # - name: Install mold as default linker
-      #   uses: rui314/setup-mold@v1
-
       - name: Checkout repository
         uses: actions/checkout@v2
 
@@ -67,6 +64,9 @@ jobs:
           toolchain: stable
           override: true
           components: clippy
+
+      - name: Install mold as default linker
+        uses: rui314/setup-mold@v1
 
       - name: Run clippy
         uses: actions-rs/clippy-check@v1
