--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,19 +13,38 @@ path = "src/main.rs"
 name = "backend"
 
 [dependencies]
-axum = { version = "0.6.0-rc.1", features = ["headers"] }
+axum = { version = "0.6.0-rc.2", features = ["headers"] }
 hyper = "0.14"
-tokio = { version = "1.0", features = ["full"] }
-serde = "1.0"
 serde_json = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-sqlx = { version = "0.6", features = [
-    "runtime-tokio-rustls",
-    "json",
-    "postgres",
-] }
 tower-http = { version = "0.3", features = ["trace", "cors"] }
+config = "0.13"
+
+[dependencies.tokio]
+version = "1"
+features = ["rt-multi-thread", "macros"]
+
+[dependencies.serde]
+version = "1"
+features = ["derive"]
+
+[dependencies.sqlx]
+version = "0.6"
+features = [
+    "runtime-tokio-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "offline",
+]
+
 
 [dev-dependencies]
 reqwest = "0.11"
+test-case = "2.2"
+
+[dev-dependencies.sqlx]
+version = "0.6"
+features = ["migrate"]
