--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ features = ["derive"]
 
 [dependencies.sqlx]
 version = "0.6"
+default-features = false
 features = [
     "runtime-tokio-rustls",
     "macros",
