--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tower-http = { version = "0.3", features = ["trace", "cors"] }
 config = "0.13"
+uuid = { version = "1", features = ["v4"] }
+chrono = { version = "0.4", default-features = false, features = ["clock"] }
 
 [dependencies.tokio]
 version = "1"
